--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "rss-parser": "^3.12.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
